tests/k8s_testcases/network-policy-checks-bad-path/matchlabels_wrong_key_form.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: podselector-matchlabels-test-key-label
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
       kjkjkjkxjckjnvknxkvjlkxjcvkxj;vjjkhjgjgjjkhlkjhlkjlkj;lk;l: db
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector: {}
        podSelector: {}
  egress:
    - to:
      - namespaceSelector: {}
        podSelector: {}
